asked changes done for all.