@@ -20,22 +20,17 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class CurrencyServiceImplementationTest {
 
-    @Mock
-    private CurrencyRepository currencyRepository;
-
-    @InjectMocks
-    private CurrencyServiceImplementation currencyService;
+    @Mock private CurrencyRepository currencyRepository;
+    @InjectMocks private CurrencyServiceImplementation currencyService;
 
     private Currency currency;
     private CurrencyRequestDto requestDto;
@@ -43,7 +38,6 @@ public class CurrencyServiceImplementationTest {
 
     @BeforeEach
     void setUp() {
-        // Set up test currency
         currency = new Currency();
         currency.setCurrencyId(1);
         currency.setCurrencyCode("USD");
@@ -54,7 +48,6 @@ public class CurrencyServiceImplementationTest {
         currency.setCreatedAt(LocalDateTime.now());
         currency.setUpdatedAt(LocalDateTime.now());
 
-        // Set up request DTO
         requestDto = new CurrencyRequestDto();
         requestDto.setCurrencyCode("USD");
         requestDto.setCurrencyName("US Dollar");
@@ -63,104 +56,80 @@ public class CurrencyServiceImplementationTest {
 
     @Test
     void getAllCurrencies_ShouldReturnListOfCurrencies() {
-        // Arrange
-        List<Currency> currencies = Arrays.asList(currency);
-        Page<Currency> currencyPage = new PageImpl<>(currencies);
-
+        Page<Currency> currencyPage = new PageImpl<>(List.of(currency));
         when(currencyRepository.findAll(any(Pageable.class))).thenReturn(currencyPage);
 
-        // Act
         List<CurrencyResponseDto> result = currencyService.getAllCurrencies(0, 10);
 
-        // Assert
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(currency.getCurrencyId(), result.get(0).getCurrencyId());
-        assertEquals(currency.getCurrencyCode(), result.get(0).getCurrencyCode());
-        assertEquals(currency.getCurrencyName(), result.get(0).getCurrencyName());
-        assertEquals(currency.getCurrencySymbol(), result.get(0).getCurrencySymbol());
+        assertEquals("USD", result.get(0).getCurrencyCode());
 
         verify(currencyRepository).findAll(PageRequest.of(0, 10));
     }
 
     @Test
-    void getCurrencyById_WhenCurrencyExists_ShouldReturnCurrency() {
-        // Arrange
+    void getCurrencyById_WhenExists_ShouldReturnCurrency() {
         when(currencyRepository.findById(1)).thenReturn(Optional.of(currency));
 
-        // Act
         CurrencyResponseDto result = currencyService.getCurrencyById(1);
 
-        // Assert
         assertNotNull(result);
-        assertEquals(currency.getCurrencyId(), result.getCurrencyId());
-        assertEquals(currency.getCurrencyCode(), result.getCurrencyCode());
+        assertEquals(1, result.getCurrencyId());
+        assertEquals("USD", result.getCurrencyCode());
 
         verify(currencyRepository).findById(1);
     }
 
     @Test
-    void getCurrencyById_WhenCurrencyDoesNotExist_ShouldThrowException() {
-        // Arrange
+    void getCurrencyById_WhenNotExists_ShouldThrowException() {
         when(currencyRepository.findById(99)).thenReturn(Optional.empty());
 
-        // Act & Assert
         assertThrows(EntityNotFoundException.class, () -> currencyService.getCurrencyById(99));
         verify(currencyRepository).findById(99);
     }
 
     @Test
-    void createCurrency_WhenCurrencyDoesNotExist_ShouldCreateCurrency() {
-        // Arrange
+    void createCurrency_WhenNotExists_ShouldCreateCurrency() {
         when(currencyRepository.existsByCurrencyCode("USD")).thenReturn(false);
         when(currencyRepository.save(any(Currency.class))).thenReturn(currency);
 
         try (MockedStatic<AuthUtils> authUtils = mockStatic(AuthUtils.class)) {
             authUtils.when(AuthUtils::getCurrentUsername).thenReturn(TEST_USER);
 
-            // Act
             CurrencyResponseDto result = currencyService.createCurrency(requestDto);
 
-            // Assert
             assertNotNull(result);
-            assertEquals(currency.getCurrencyId(), result.getCurrencyId());
-            assertEquals(currency.getCurrencyCode(), result.getCurrencyCode());
-
+            assertEquals("USD", result.getCurrencyCode());
             verify(currencyRepository).existsByCurrencyCode("USD");
             verify(currencyRepository).save(any(Currency.class));
         }
     }
 
     @Test
-    void createCurrency_WhenCurrencyExists_ShouldThrowException() {
-        // Arrange
+    void createCurrency_WhenAlreadyExists_ShouldThrowException() {
         when(currencyRepository.existsByCurrencyCode("USD")).thenReturn(true);
 
-        // Act & Assert
         assertThrows(EntityExistsException.class, () -> currencyService.createCurrency(requestDto));
+
         verify(currencyRepository).existsByCurrencyCode("USD");
         verify(currencyRepository, never()).save(any(Currency.class));
     }
 
     @Test
-    void updateCurrency_WhenCurrencyExists_ShouldUpdateCurrency() {
-        // Arrange
+    void updateCurrency_WhenExists_ShouldUpdateCurrency() {
         when(currencyRepository.findById(1)).thenReturn(Optional.of(currency));
         when(currencyRepository.save(any(Currency.class))).thenReturn(currency);
 
-        // Modify the request DTO to simulate an update
-        requestDto.setCurrencyName("Updated US Dollar");
+        requestDto.setCurrencyName("Updated Dollar");
 
         try (MockedStatic<AuthUtils> authUtils = mockStatic(AuthUtils.class)) {
             authUtils.when(AuthUtils::getCurrentUsername).thenReturn(TEST_USER);
 
-            // Act
             CurrencyResponseDto result = currencyService.updateCurrency(1, requestDto);
 
-            // Assert
-            assertNotNull(result);
-            assertEquals(currency.getCurrencyId(), result.getCurrencyId());
-            assertEquals(currency.getCurrencyCode(), result.getCurrencyCode());
+            assertEquals("USD", result.getCurrencyCode());
+            assertEquals("Updated Dollar", result.getCurrencyName());
 
             verify(currencyRepository).findById(1);
             verify(currencyRepository).save(any(Currency.class));
@@ -168,86 +137,69 @@ public class CurrencyServiceImplementationTest {
     }
 
     @Test
-    void updateCurrency_WhenCurrencyDoesNotExist_ShouldThrowException() {
-        // Arrange
+    void updateCurrency_WhenCurrencyNotFound_ShouldThrowException() {
         when(currencyRepository.findById(99)).thenReturn(Optional.empty());
 
-        // Act & Assert
         assertThrows(EntityNotFoundException.class, () -> currencyService.updateCurrency(99, requestDto));
+
         verify(currencyRepository).findById(99);
         verify(currencyRepository, never()).save(any(Currency.class));
     }
 
     @Test
-    void updateCurrency_WhenNewCodeAlreadyExists_ShouldThrowException() {
-        // Arrange
+    void updateCurrency_WhenNewCodeExists_ShouldThrowException() {
         Currency existingCurrency = new Currency();
         existingCurrency.setCurrencyId(1);
         existingCurrency.setCurrencyCode("USD");
 
-        // New request with different code
-        CurrencyRequestDto newCodeRequest = new CurrencyRequestDto();
-        newCodeRequest.setCurrencyCode("EUR");
-        newCodeRequest.setCurrencyName("Euro");
-        newCodeRequest.setCurrencySymbol("€");
+        CurrencyRequestDto newCodeDto = new CurrencyRequestDto("EUR", "Euro", "€");
 
         when(currencyRepository.findById(1)).thenReturn(Optional.of(existingCurrency));
         when(currencyRepository.existsByCurrencyCode("EUR")).thenReturn(true);
 
-        // Act & Assert
-        assertThrows(EntityExistsException.class, () -> currencyService.updateCurrency(1, newCodeRequest));
-        verify(currencyRepository).findById(1);
+        assertThrows(EntityExistsException.class, () -> currencyService.updateCurrency(1, newCodeDto));
+
         verify(currencyRepository).existsByCurrencyCode("EUR");
         verify(currencyRepository, never()).save(any(Currency.class));
     }
 
     @Test
-    void deleteCurrency_WhenCurrencyExists_ShouldDeleteCurrency() {
-        // Arrange
+    void deleteCurrency_WhenExists_ShouldDelete() {
         when(currencyRepository.existsById(1)).thenReturn(true);
         doNothing().when(currencyRepository).deleteById(1);
 
-        // Act
         currencyService.deleteCurrency(1);
 
-        // Assert
         verify(currencyRepository).existsById(1);
         verify(currencyRepository).deleteById(1);
     }
 
     @Test
-    void deleteCurrency_WhenCurrencyDoesNotExist_ShouldThrowException() {
-        // Arrange
+    void deleteCurrency_WhenNotExists_ShouldThrowException() {
         when(currencyRepository.existsById(99)).thenReturn(false);
 
-        // Act & Assert
         assertThrows(EntityNotFoundException.class, () -> currencyService.deleteCurrency(99));
+
         verify(currencyRepository).existsById(99);
         verify(currencyRepository, never()).deleteById(99);
     }
 
     @Test
-    void getCurrencyByCode_WhenCurrencyExists_ShouldReturnCurrency() {
-        // Arrange
+    void getCurrencyByCode_WhenExists_ShouldReturnCurrency() {
         when(currencyRepository.findByCurrencyCode("USD")).thenReturn(Optional.of(currency));
 
-        // Act
         CurrencyResponseDto result = currencyService.getCurrencyByCode("USD");
 
-        // Assert
         assertNotNull(result);
-        assertEquals(currency.getCurrencyId(), result.getCurrencyId());
-        assertEquals(currency.getCurrencyCode(), result.getCurrencyCode());
+        assertEquals("USD", result.getCurrencyCode());
 
         verify(currencyRepository).findByCurrencyCode("USD");
     }
 
     @Test
-    void getCurrencyByCode_WhenCurrencyDoesNotExist_ShouldThrowException() {
-        // Arrange
+    void getCurrencyByCode_WhenNotExists_ShouldThrowException() {
         when(currencyRepository.findByCurrencyCode("XXX")).thenReturn(Optional.empty());
 
-        // Act & Assert
         assertThrows(EntityNotFoundException.class, () -> currencyService.getCurrencyByCode("XXX"));
         verify(currencyRepository).findByCurrencyCode("XXX");
     }
